--- a/index.html
+++ b/index.html
@@ -28,26 +28,29 @@
                 </div>
                 <div class="control-btn-group d-flex flex-row ">
                     <div class="align-self-md-center ">
-                        <!-- <div class="w3-dropdown-hover">
-                            <button class="btn btn-sm btn-primary controlBtn rounded-lg dropdown-toggle"
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        <div class="w3-dropdown-hover">
+                            <button class="btn btn-sm btn-primary controlBtn rounded-lg"
                                 aria-expanded="false"><span class="">CC1</span>
                             </button>
-                            <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                                <a href="#" class="w3-bar-item w3-button">Link 1</a>
-                                <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                                <a href="#" class="w3-bar-item w3-button">Link 3</a>
+                            <div class="w3-dropdown-content w3-bar-block w3-card-4" style="z-index: initial">
+                                <a href="javascript:void(0);" onclick="mediaControl.onClosedCaption();" class="w3-bar-item w3-button" data-cc-status="false">Caption Off</a>
                             </div>
-                        </div> -->
+                        </div>
 
-                        <button class="btn btn-sm btn-primary controlBtn rounded-lg"><span class="">CC1</span>
-                        </button>
                         <button class="btn btn-sm btn-primary controlBtn rounded-lg pl-3 pr-3"
                             onclick="mediaControl.onMuteSoundClick();">
                             <i class="fa fa-volume-up"></i>
                         </button>
-                        <button class="btn btn-sm btn-primary controlBtn rounded-lg"
-                            onclick="mediaControl.onMuteSoundClick();"><span class="">SAP</span></button>
+
+                        <div class="w3-dropdown-hover">
+                            <button class="btn btn-sm btn-primary controlBtn rounded-lg"
+                                aria-expanded="false"><span class="">SAP</span>
+                            </button>
+                            <div class="w3-dropdown-content w3-bar-block w3-card-4" style="z-index: initial">
+                                <a href="javascript:void(0);" onclick="mediaControl.onClosedCaption();" class="w3-bar-item w3-button">English</a>
+                                <a href="javascript:void(0);" onclick="mediaControl.onClosedCaption();" class="w3-bar-item w3-button">Spanish</a>
+                            </div>
+                        </div>
                         <button class="btn btn-sm btn-danger controlBtn rounded-lg p-0"
                             onclick="mediaControl.onMuteSoundClick();">
                             <img src="assets/icons/tv_guide.png" style="width:38px;"
@@ -109,6 +112,8 @@
             this.videoEle;
 
             this.controlTop;
+
+            this.ccStatus = false; //Closed Caption Status
 
             this.videoPause = false;
 
@@ -177,6 +182,11 @@
             Android.showToast(toast);
         }
 
+        MediaControlsComponent.prototype.onClosedCaption = function () {
+            this.ccStatus = !this.ccStatus;
+            $("[data-cc-status]").text(this.ccStatus ? 'Caption On' : 'Caption Off');
+        }
+
         MediaControlsComponent.prototype.onPlayClick = function () {
             if (!this.videoPause) {
                 this.videoPause = true;
@@ -204,7 +214,7 @@
             Android.onRewind(1);
         }
 
-        MediaControlsComponent.prototype.onFastForward = function () {
+        MediaControlsComponent.prototype.onFastForward = function  () {
             Android.onFastForward(1)
         }
 
