Touch and Touch Move Listener

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                 $('html').on('touch', function (e) {
                     self.showControl(true);
                 });
+                $('html').on('touchmove', function (e) {
+                    self.showControl(true);
+                });
             })(this)
 
             $("[data-event-name]").text(this.eventName);
